--- a/src/Resources/public/css/parallax.css
+++ b/src/Resources/public/css/parallax.css
@@ -4,30 +4,28 @@
  *  @author   : Arne Borchert
  *  @license  : LGPL 3.0+
  */
-.responsive-background-wrapper {
-    zoom: 1;
+
+.has-responsive-background-image{
     position: relative;
-    clear: both;
+}
+
+.has-responsive-background-image.parallax {
+    min-height: 100vh;
+    background: transparent;
     overflow: hidden;
 }
 
-.responsive-background-content {
-    position: relative;
-}
-
-.responsive-background-image {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: center center no-repeat;
+.has-responsive-background-image .bgImage {
     background-size: cover;
+    position: absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height: 100%;
+    background-position-y: center;
+    z-index: -100;
 }
 
-.responsive-background-image > figure {
-    display: none;
-    width: 0;
-    height: 0;
-    overflow: hidden;
+.parallax .bgImage {
+    height:200%;
 }
